--- a/index.html
+++ b/index.html
@@ -46,32 +46,32 @@
 
   <div class="calendar-container">
     <h2>Sala 1</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=TUCALENDARIO1&ctz=America%2FSantiago"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN1" class="link-agendar" target="_blank">Agendar cita en Sala 1</a>
+    <iframe src="https://calendar.google.com/calendar/embed?src=amandoyoga.sala1%40gmail.com&ctz=America%2FSantiago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN1" class="link-agendar" target="_blank">Reservar en Sala 1</a>
   </div>
 
   <div class="calendar-container">
     <h2>Sala 2</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=TUCALENDARIO2&ctz=America%2FSantiago"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN2" class="link-agendar" target="_blank">Agendar cita en Sala 2</a>
+    <iframe src="https://calendar.google.com/calendar/embed?src=amandoyoga.sala2%40gmail.com&ctz=America%2FSantiago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN2" class="link-agendar" target="_blank">Reservar en Sala 2</a>
   </div>
 
   <div class="calendar-container">
     <h2>Sala 3</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=TUCALENDARIO3&ctz=America%2FSantiago"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN3" class="link-agendar" target="_blank">Agendar cita en Sala 3</a>
+    <iframe src="https://calendar.google.com/calendar/embed?src=amandoyoga.sala3%40gmail.com&ctz=America%2FSantiago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN3" class="link-agendar" target="_blank">Reservar en Sala 3</a>
   </div>
 
   <div class="calendar-container">
     <h2>Sala 4</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=TUCALENDARIO4&ctz=America%2FSantiago"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN4" class="link-agendar" target="_blank">Agendar cita en Sala 4</a>
+    <iframe src="https://calendar.google.com/calendar/embed?src=amandoyoga.sala4%40gmail.com&ctz=America%2FSantiago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN4" class="link-agendar" target="_blank">Reservar en Sala 4</a>
   </div>
 
   <div class="calendar-container">
     <h2>Salón</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=TUCALENDARIO5&ctz=America%2FSantiago"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN5" class="link-agendar" target="_blank">Agendar cita en Salón</a>
+    <iframe src="https://calendar.google.com/calendar/embed?src=amandoyoga.salon%40gmail.com&ctz=America%2FSantiago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN5" class="link-agendar" target="_blank">Reservar Salón</a>
   </div>
 
 </body>
