--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <div class="calendar-container">
     <h2>Salón</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=amandoyoga.salon%40gmail.com&ctz=America%2FSantiago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=America%2FSantiago&showTz=0&mode=WEEK&title=Sal%C3%B3n&showCalendars=0&showPrint=0&src=Z29uemFsb3NlZ3VlbEBnbWFpbC5jb20&src=ZmFtaWx5MDE5OTI4MzU3NTYyODYzNzEyMzRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=ZXMuY2wjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23EF6C00&color=%233F51B5&color=%230B8043" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN5" class="link-agendar" target="_blank">Reservar Salón</a>
   </div>
 
