--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <div class="calendar-container">
     <h2>Sala 1</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=amandoyoga.sala1%40gmail.com&ctz=America%2FSantiago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=America%2FSantiago&showTz=0&mode=WEEK&title=Sal%C3%B3n&showCalendars=0&showPrint=0&src=YW1hbmRveW9nYS5zYWxhMUBnbWFpbC5jb20&src=YW1hbmRveW9nYS5zYWxhMkBnbWFpbC5jb20&src=YW1hbmRveW9nYS5zYWxhM0BnbWFpbC5jb20&src=YW1hbmRveW9nYS5zYWxhNEBnbWFpbC5jb20&src=YW1hbmRveW9nYS5zYWxvbkBnbWFpbC5jb20&color=%237CB342&color=%23039BE5&color=%23616161&color=%23D50000&color=%23AD1457" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN1" class="link-agendar" target="_blank">Reservar en Sala 1</a>
   </div>
 
