--- a/index.html
+++ b/index.html
@@ -46,31 +46,31 @@
 
   <div class="calendar-container">
     <h2>Sala 1</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&src=YW1hbmRveW9nYS5zYWxhMUBnbWFpbC5jb20&color=%237CB342" style="border-width:0" width="500" height="800" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhMUBnbWFpbC5jb20&color=%237CB342" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
     <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN1" class="link-agendar" target="_blank">Reservar en Sala 1</a>
   </div>
 
   <div class="calendar-container">
     <h2>Sala 2</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&src=YW1hbmRveW9nYS5zYWxhMkBnbWFpbC5jb20&color=%23039BE5" style="border-width:0" width="500" height="800" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhMkBnbWFpbC5jb20&color=%23039BE5" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
     <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN2" class="link-agendar" target="_blank">Reservar en Sala 2</a>
   </div>
 
   <div class="calendar-container">
     <h2>Sala 3</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&src=YW1hbmRveW9nYS5zYWxhM0BnbWFpbC5jb20&color=%23616161" style="border-width:0" width="500" height="800" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhM0BnbWFpbC5jb20&color=%23616161" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
     <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN3" class="link-agendar" target="_blank">Reservar en Sala 3</a>
   </div>
 
   <div class="calendar-container">
     <h2>Sala 4</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&src=YW1hbmRveW9nYS5zYWxhNEBnbWFpbC5jb20&color=%23D50000" style="border-width:0" width="500" height="800" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhNEBnbWFpbC5jb20&color=%23D50000" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
     <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN4" class="link-agendar" target="_blank">Reservar en Sala 4</a>
   </div>
 
   <div class="calendar-container">
     <h2>Salón</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&src=YW1hbmRveW9nYS5zYWxvbkBnbWFpbC5jb20&color=%23AD1457" style="border-width:0" width="500" height="800" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxvbkBnbWFpbC5jb20&color=%23AD1457" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
     <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN5" class="link-agendar" target="_blank">Reservar Salón</a>
   </div>
 
