--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Reserva de Salas</title>
+  #<title>Reserva de salas de Amandoyoga</title>
+  <div class="titulo-con-logo">
+  <img src="logo.png" alt="Logo" class="logo">
+  <h1>Reserva de Salas</h1>
+  </div>
   <style>
     body {
       font-family: sans-serif;
@@ -37,6 +41,16 @@
     }
     .link-agendar:hover {
       background: #2980b9;
+    }
+    .titulo-con-logo {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    }
+
+    .logo {
+    height: 1.5em; /* Ajusta a la altura del texto */
+    width: auto;
     }
   </style>
 </head>
