--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
   <div class="calendar-container">
     <h2>Sala 1</h2>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhMUBnbWFpbC5jb20&color=%237CB342" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN1" class="link-agendar" target="_blank">Reservar en Sala 1</a>
+    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3LGjnVCX0IEsSFL0ELVhTRcDDApZN382AcMyIJIRnpz80sR21x_zIxdPyC0KoD-LhsavT-RX_B?gv=true" class="link-agendar" target="_blank">Reservar en Sala 1</a>
   </div>
 
   <div class="calendar-container">
     <h2>Sala 2</h2>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhMkBnbWFpbC5jb20&color=%23039BE5" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN2" class="link-agendar" target="_blank">Reservar en Sala 2</a>
+    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ1O-pVlyde4X64huyyM1PIqS_lSdGsNVpYxTzuIeN7kYeYgET8ipk9t7AENfVYxzHJpUku1StXK?gv=true" class="link-agendar" target="_blank">Reservar en Sala 2</a>
   </div>
 
   <div class="calendar-container">
