--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
   <div class="calendar-container">
     <h2>Sala 1</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhMUBnbWFpbC5jb20&color=%237CB342" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
     <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3LGjnVCX0IEsSFL0ELVhTRcDDApZN382AcMyIJIRnpz80sR21x_zIxdPyC0KoD-LhsavT-RX_B?gv=true" class="link-agendar" target="_blank">Reservar en Sala 1</a>
+    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhMUBnbWFpbC5jb20&color=%237CB342" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
   </div>
 
   <div class="calendar-container">
@@ -85,7 +85,7 @@
   <div class="calendar-container">
     <h2>Sala 3</h2>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhM0BnbWFpbC5jb20&color=%23616161" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN3" class="link-agendar" target="_blank">Reservar en Sala 3</a>
+    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2yW0aljlbEtrFOMqTvFHFawbjGeZNxoiXJaNdGCbvohBowpg73aDVZ2Ou2a_RXJUxYG3hbwoEv?gv=true" class="link-agendar" target="_blank">Reservar en Sala 3</a>
   </div>
 
   <div class="calendar-container">
