--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       color: #2c3e50;
     }
     .calendar-container {
-      margin-bottom: 40px;
+      margin-top 20px;
+      margin-bottom: 20px;
       background: #fff;
       padding: 20px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
