--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
     margin: 20px auto;
     width: 80%;
     }
+    .sala-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* o space-around si prefieres */
+    margin-bottom: 10px;
+    flex-wrap: wrap; /* por si en móviles no cabe todo en una línea */
+    }
+
+    .sala-header h2 {
+    margin: 0;
+    }
   </style>
 </head>
 <body>
@@ -72,33 +83,35 @@
 </div>
 
   <div class="calendar-container">
+    <div class="sala-header">
     <h2>Sala 1</h2>
-    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3LGjnVCX0IEsSFL0ELVhTRcDDApZN382AcMyIJIRnpz80sR21x_zIxdPyC0KoD-LhsavT-RX_B?gv=true" class="link-agendar" target="_blank">Reservar en Sala 1</a>
+    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3LGjnVCX0IEsSFL0ELVhTRcDDApZN382AcMyIJIRnpz80sR21x_zIxdPyC0KoD-LhsavT-RX_B?gv=true" class="link-agendar" target="_blank">Reservar</a>
+  </div>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhMUBnbWFpbC5jb20&color=%237CB342" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
   </div>
 
   <div class="calendar-container">
     <h2>Sala 2</h2>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhMkBnbWFpbC5jb20&color=%23039BE5" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ1O-pVlyde4X64huyyM1PIqS_lSdGsNVpYxTzuIeN7kYeYgET8ipk9t7AENfVYxzHJpUku1StXK?gv=true" class="link-agendar" target="_blank">Reservar en Sala 2</a>
+    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ1O-pVlyde4X64huyyM1PIqS_lSdGsNVpYxTzuIeN7kYeYgET8ipk9t7AENfVYxzHJpUku1StXK?gv=true" class="link-agendar" target="_blank">Reservar</a>
   </div>
 
   <div class="calendar-container">
     <h2>Sala 3</h2>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhM0BnbWFpbC5jb20&color=%23616161" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2yW0aljlbEtrFOMqTvFHFawbjGeZNxoiXJaNdGCbvohBowpg73aDVZ2Ou2a_RXJUxYG3hbwoEv?gv=true" class="link-agendar" target="_blank">Reservar en Sala 3</a>
+    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2yW0aljlbEtrFOMqTvFHFawbjGeZNxoiXJaNdGCbvohBowpg73aDVZ2Ou2a_RXJUxYG3hbwoEv?gv=true" class="link-agendar" target="_blank">Reservar</a>
   </div>
 
   <div class="calendar-container">
     <h2>Sala 4</h2>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhNEBnbWFpbC5jb20&color=%23D50000" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN4" class="link-agendar" target="_blank">Reservar en Sala 4</a>
+    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN4" class="link-agendar" target="_blank">Reservar</a>
   </div>
 
   <div class="calendar-container">
     <h2>Salón</h2>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxvbkBnbWFpbC5jb20&color=%23AD1457" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN5" class="link-agendar" target="_blank">Reservar Salón</a>
+    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN5" class="link-agendar" target="_blank">Reservar</a>
   </div>
 
 </body>
