--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     .sala-header {
     display: flex;
     align-items: center;
-    justify-content: space-between; /* o space-around si prefieres */
+    justify-content: flex-start; /* o space-around si prefieres */
+    gap: 20px;
     margin-bottom: 10px;
     flex-wrap: wrap; /* por si en móviles no cabe todo en una línea */
     }
