--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       padding: 10px 20px;
       text-decoration: none;
       border-radius: 8px;
+      font-size: 0.95em; /* <- Esto es lo que define el tamaño */
     }
     .link-agendar:hover {
       background: #2980b9;
@@ -71,6 +72,7 @@
 
     .sala-header h2 {
     margin: 0;
+    font-size: 0.95em; /* <- Esto es lo que define el tamaño */
     }
   </style>
 </head>
