--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     .sala-header h2 {
     margin: 0;
-    font-size: 1.8em; /* <- Esto es lo que define el tamaño */
+    font-size: 2em; /* <- Esto es lo que define el tamaño */
     }
   </style>
 </head>
@@ -122,7 +122,7 @@
   <div class="calendar-container">
     <div class="sala-header">
     <h2>Salón</h2>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN5" class="link-agendar" target="_blank">Reservar</a>
+    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2ij6zQHq-E7eXuFyVdW4M5s20kDyYkKPlqAxaSWtxxm4LsZCZsGL1BLhEdb3tOvJrsdDXvwM17?gv=true" class="link-agendar" target="_blank">Reservar</a>
     </div>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxvbkBnbWFpbC5jb20&color=%23AD1457" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
   </div>
