--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="faviconV2.png" type="image/png">
+  <title>Reserva de salas y salón de Amandoyoga</title>
   <style>
     body {
       font-family: sans-serif;
