--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
     .link-agendar {
       display: inline-block;
-      background: #3498db;
+      background: #019b93;
       color: white;
       padding: 10px 10px;
       text-decoration: none;
@@ -39,7 +39,7 @@
       transition: all 0.3s ease-in-out;
     }
     .link-agendar:hover {
-      background: #2980b9;
+      background: #007464;
       transform: scale(1.05);
     }
     .link-agendar:active {
@@ -92,7 +92,7 @@
 }
 
 .navegacion-salas a {
-  background-color: #3498db;
+  background-color: #019b93;
   color: white;
   padding: 10px 10px;
   border-radius: 6px;
@@ -104,7 +104,7 @@
   transition: all 0.3s ease-in-out;
 }
   .navegacion-salas a:hover {
-  background: #2980b9;
+  background: #007464;
   transform: scale(1.05);
 }
 .navegacion-salas a:active {
