--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <div class="calendar-container" id="sala4">
     <div class="sala-header">
     <h2>Sala 4</h2>
-    <a href="https://calendar.google.com/calendar/u/0/selfsched?sstoken=TOKEN4" class="link-agendar" target="_blank">Reservar</a>
+    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2389CH0DeH4qvxZGp_T5qo__nYwHTXsF6hEDrcwWuy6uvmK2UglamejFk-Rbho3sE_P_yjBceA?gv=true" class="link-agendar" target="_blank">Reservar</a>
     </div>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhNEBnbWFpbC5jb20&color=%23D50000" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
     
