--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   <div class="calendar-container" id="sala1">
     <div class="sala-header">
       <h2>Sala 1</h2>
-      <a class="link-agendar" onclick="openModal('https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3LGjnVCX0IEsSFL0ELVhTRcDDApZN382AcMyIJIRnpz80sR21x_zIxdPyC0KoD-LhsavT-RX_B?gv=true')">Reservar</a>
+      <a class="link-agendar" onclick="openModal('https://calendly.com/amandoyoga-sala1/60min')">Reservar</a>
     </div>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhMUBnbWFpbC5jb20&color=%237CB342" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
   </div>
