--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
     .modal-content {
       background: white;
       width: 90%;
-      max-width: 900px;
-      height: 80%;
+      max-width: 1500px;
+      height: 90%;
+      max-height: 1500px;
       border-radius: 10px;
       padding: 20px;
       position: relative;
@@ -161,8 +162,8 @@
         width: calc(20% - 10px);
       }
       .modal-content {
-        width: 95%;
-        height: 70%;
+        width: 90%;
+        height: 90%;
       }
     }
   </style>
@@ -203,7 +204,7 @@
   <div class="calendar-container" id="sala2">
     <div class="sala-header">
       <h2>Sala 2</h2>
-      <a class="link-agendar" onclick="openModal('https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ1O-pVlyde4X64huyyM1PIqS_lSdGsNVpYxTzuIeN7kYeYgET8ipk9t7AENfVYxzHJpUku1StXK?gv=true')">Reservar</a>
+      <a class="link-agendar" onclick="openModal('https://calendly.com/amandoyoga-sala2/60min')">Reservar</a>
     </div>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhMkBnbWFpbC5jb20&color=%23039BE5" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
   </div>
