--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   <div class="calendar-container" id="sala3">
     <div class="sala-header">
       <h2>Sala 3</h2>
-      <a class="link-agendar" onclick="openModal('https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2yW0aljlbEtrFOMqTvFHFawbjGeZNxoiXJaNdGCbvohBowpg73aDVZ2Ou2a_RXJUxYG3hbwoEv?gv=true')">Reservar</a>
+      <a class="link-agendar" onclick="openModal('https://calendly.com/amandoyoga-sala3/60min')">Reservar</a>
     </div>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxhM0BnbWFpbC5jb20&color=%23616161" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
   </div>
