--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   <div class="calendar-container" id="salon">
     <div class="sala-header">
       <h2>Salón</h2>
-      <a class="link-agendar" onclick="openModal('https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2ij6zQHq-E7eXuFyVdW4M5s20kDyYkKPlqAxaSWtxxm4LsZCZsGL1BLhEdb3tOvJrsdDXvwM17?gv=true')">Reservar</a>
+      <a class="link-agendar" onclick="openModal('https://calendly.com/amandoyoga-salon/60min')">Reservar</a>
     </div>
     <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=2&ctz=America%2FSantiago&showPrint=0&showTz=0&title=Sala%202&showTitle=0&mode=WEEK&showCalendars=0&src=YW1hbmRveW9nYS5zYWxvbkBnbWFpbC5jb20&color=%23AD1457" style="border-width:0" width="600" height="800" frameborder="0" scrolling="no"></iframe>
   </div>
