--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     body {
       font-family: sans-serif;
       margin: 40px;
-      background: #f4f4f4;
-      color: #333;
+      background: linear-gradient(to bottom right, #cfe6e5, #ffffff);
+      color: #222;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      transition: background 0.5s ease;
     }
     h2 {
       margin-top: 5px;
