--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
       margin: 40px;
       background: linear-gradient(to bottom right, #cfe6e5, #ffffff);
       color: #222;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       min-height: 100vh;
       transition: background 0.5s ease;
     }
@@ -257,5 +254,8 @@
       }
     }
   </script>
+    <div class="footer">
+    &copy; 2025 Amandoyoga. Todos los derechos reservados.
+    </div>
 </body>
 </html>
