--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       margin-top: 5px;
       color: #2c3e50;
     }
+      .footer {
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      color: #555;
+      text-align: center;
+    }
     .calendar-container {
       margin-top 20px;
       margin-bottom: 20px;
@@ -254,8 +260,8 @@
       }
     }
   </script>
-    <div class="footer">
+    <footer class="footer">
     &copy; 2025 Amandoyoga. Todos los derechos reservados.
-    </div>
+    </footer>
 </body>
 </html>
